# Tear

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  rust-toolchain.toml  setup.sh
.cargo/: config.toml
agents/: Cargo.toml
agents/src/: bitte.rs  lib.rs  near_ai.rs
ai-moderator/: Cargo.toml
ai-moderator/async-openai-patched/async-openai/src/: lib.rs
ai-moderator/async-openai-patched/async-openai/src/types/: assistant.rs  chat.rs  message.rs
ai-moderator/schema/: moderate.schema.json  prompt_creation.schema.json  prompt_edition.schema.json  prompt_editor.schema.json
ai-moderator/src/: lib.rs  moderator.rs  payments.rs  utils.rs
ai-moderator/src/billing/: add_balance.rs  mod.rs  plans.rs
ai-moderator/src/edit/: actions.rs  additional_settings.rs  ai_enabled.rs  block_forwarded_stories.rs  block_links.rs  block_mostly_emoji_messages.rs  commands.rs  debug_mode.rs  delete_join_leave_messages.rs  deletion_message.rs  enabled.rs  first_messages.rs  greeting.rs  mod.rs  model.rs  moderator_chat.rs  mute_flood.rs  mute_impersonators.rs  prompt.rs  silent.rs  word_blocklist.rs
ai-moderator/src/features/: delete_join_leave_messages.rs  greeting.rs  mod.rs  moderation_commands.rs  mute_flood.rs
ai-moderator/src/moderation_actions/: add_exception.rs  ban.rs  delete_message.rs  mod.rs  see_reason.rs  unban.rs  undelete_message.rs  unmute.rs
ai-moderator/src/setup/: add_as_admin.rs  builder.rs  mod.rs
bettearbot-connect-bridge/: .prettierignore  README.md  env.example  package-lock.json  package.json  tsconfig.json
bettearbot-connect-bridge/app/: layout.tsx  page.tsx
bettearbot-connect-bridge/app/api/auth/: route.ts
bettearbot-connect-bridge/app/api/auth/callback/: route.ts
bettearbot-connect-bridge/app/api/disconnect/: route.ts
bettearbot-connect-bridge/app/api/get-all/: route.ts
bettearbot-connect-bridge/app/api/near/connect/: route.ts
bettearbot-connect-bridge/app/api/pnl/: route.ts
bettearbot-connect-bridge/app/api/user/: route.ts
bettearbot-connect-bridge/app/api/verify/: route.ts
bettearbot-connect-bridge/app/verify/: page.tsx
bettearbot-connect-bridge/lib/: crypto.ts  db.ts  near.ts
burrow-liquidations/: Cargo.toml
burrow-liquidations/src/: lib.rs
contract-logs/: Cargo.toml
contract-logs/src/: lib.rs  nep297.rs  text.rs
explorer/: Cargo.toml
explorer/src/: lib.rs
ft-buybot/: Cargo.toml
ft-buybot/src/: lib.rs
house-of-stake/: Cargo.toml
house-of-stake/src/: lib.rs
near-tgi/: Cargo.toml  build.rs
near-tgi/inquire/: Cargo.toml
near-tgi/inquire/src/: lib.rs
near-tgi/keyring/: Cargo.toml
near-tgi/keyring/src/: lib.rs
near-tgi/src/: lib.rs
price-commands/: Cargo.toml
price-commands/src/: chart.html  lib.rs
raid-bot/: Cargo.toml
raid-bot/src/: lib.rs
subscription-lists/: Cargo.toml
subscription-lists/src/: lib.rs
tearbot/: Cargo.toml
tearbot-common/: Cargo.toml
tearbot-common/src/: bot_commands.rs  indexer_events.rs  lib.rs  redis_event_reader.rs  tgbot.rs  utils.rs  xeon.rs
tearbot-common/src/utils/: ai.rs  apis.rs  badges.rs  chat.rs  nep297_events.rs  requests.rs  rpc.rs  store.rs  tokens.rs
tearbot/src/: main.rs
tearbot/src/modules/: hub.rs  inline_query.rs  mod.rs
teloxide/crates/teloxide-core/src/: types.rs
teloxide/crates/teloxide-core/src/adaptors/throttle/: request.rs  worker.rs
teloxide/crates/teloxide-core/src/payloads/: create_invoice_link.rs
teloxide/crates/teloxide-core/src/types/: external_reply_info.rs  inline_keyboard_button.rs  passport_element_error.rs  successful_payment.rs
teloxide/crates/teloxide-core/src/types/non_telegram_types/: currency.rs
teloxide/crates/teloxide/src/: stop.rs
teloxide/crates/teloxide/src/utils/: markdown.rs
tip-bot/: Cargo.toml
tip-bot/src/: lib.rs
utilities/: Cargo.toml
utilities/src/: lib.rs
wallet-tracking/: Cargo.toml
wallet-tracking/src/: lib.rs
