[package]
name = "agents"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "agents-module" ] }
async-trait = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
cached = { workspace = true }
reqwest = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["time"] }
base64 = { workspace = true }
near-api = { workspace = true }
near-crypto = { workspace = true }
