[package]
name = "ai-moderator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tearbot-common = { path = "../tearbot-common", features = ["ai-moderator-module"] }
async-trait = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }
serde_json = { workspace = true }
chrono = { workspace = true }
lazy_static = { workspace = true }
unicode-security = "0.1.2"
cached = { workspace = true }

[features]
near = []
