[package]
name = "burrow-liquidations"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "burrow-liquidations-module" ] }
async-trait = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true, features = [ "serde" ] }
