[package]
name = "contract-logs"
version = "0.1.0"
edition = "2021"

[dependencies]
tearbot-common = { path = "../tearbot-common" }
async-trait = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
