[package]
name = "contract-logs"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "contract-logs-module" ] }
async-trait = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
