[package]
name = "explorer"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
futures-util = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
near-jsonrpc-primitives = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 