[package]
name = "ft-buybot"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "ft-buybot-module" ] }
async-trait = { workspace = true }
dashmap = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
futures-util = { workspace = true }
