[package]
name = "price-commands"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "price-commands-module" ] }
async-trait = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
bigdecimal = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
fantoccini = { version = "0.21.2", features = ["rustls-tls"] }
tokio = { workspace = true, features = ["process", "sync"] }
