[package]
name = "raid-bot"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "raid-bot-module" ] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
cached = { workspace = true }
axum = { workspace = true }
