[package]
name = "tearbot-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
cached = { workspace = true, features = [
    "async",
    "async_tokio_rt_multi_thread",
    "disk_store",
] }
chrono = { workspace = true }
dashmap = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mongodb = { workspace = true }
bson = { workspace = true, features = ["chrono-0_4"] }
rand = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
teloxide = { workspace = true, features = [
    "throttle",
    "cache-me",
] }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-stream = { workspace = true }
near-primitives = { workspace = true }
inindexer = { workspace = true }
redis = { workspace = true, features = [
    "tokio-rustls-comp",
    "connection-manager",
], optional = true }
inevents-redis-old = { git = "https://github.com/INTEARnear/inevents", rev = "81226476284317b4945f3470265b05a58b033633", package = "inevents-redis", optional = true }
inevents-redis = { git = "https://github.com/INTEARnear/inevents", optional = true }
intear-events = { workspace = true }
futures-util = { workspace = true }
semver = { workspace = true, optional = true }
tokio-tungstenite = { version = "0.23.1", features = [
    "rustls-tls-native-roots",
], optional = true }
inquire = { workspace = true, optional = true }
serde_with = { workspace = true }
bigdecimal = { workspace = true }
near-api = { workspace = true }
near-token = { workspace = true }
near-gas = { workspace = true }
solana-sdk = { version = "2", optional = true }

[features]
contract-logs-module = ["semver"]
ft-buybot-module = []
new-liquidity-pools-module = []
nft-buybot-module = []
potlock-module = []
price-alerts-module = []
socialdb-module = []
new-tokens-module = []
utilities-module = []
near-tgi-module = ["inquire"]
ai-moderator-module = []
image-gen-module = []
burrow-liquidations-module = []
price-commands-module = []
trading-bot-module = ["solana-sdk"]
wallet-tracking-module = []

redis-events = ["redis", "inevents-redis", "inevents-redis-old"]
websocket-events = ["tokio-tungstenite"]
