[package]
name = "tearbot"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common" }
contract-logs = { path = "../contract-logs", optional = true }
ft-buybot = { path = "../xeon-private-modules/ft-buybot", optional = true }
new-liquidity-pools = { path = "../xeon-private-modules/new-liquidity-pools", optional = true }
nft-buybot = { path = "../xeon-private-modules/nft-buybot", optional = true }
potlock = { path = "../xeon-private-modules/potlock", optional = true }
price-alerts = { path = "../xeon-private-modules/price-alerts", optional = true }
socialdb = { path = "../xeon-private-modules/socialdb", optional = true }
new-tokens = { path = "../xeon-private-modules/new-tokens", optional = true }
utilities = { path = "../utilities", optional = true }
near-tgi = { path = "../near-tgi", optional = true }
ai-moderator = { path = "../ai-moderator", optional = true }
image-gen = { path = "../xeon-private-modules/image-gen", optional = true }
burrow-liquidations = { path = "../burrow-liquidations", optional = true }
price-commands = { path = "../price-commands", optional = true }
trading-bot = { path = "../xeon-private-modules/trading-bot", optional = true }
wallet-tracking = { path = "../wallet-tracking", optional = true }

anyhow = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true, features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
log = { workspace = true }
simple_logger = { workspace = true }
reqwest = { workspace = true }
itertools = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
rustls = "0.23.12"
openssl = { version = "0.10", features = ["vendored"] }
serde_json = { workspace = true }
near-jsonrpc-primitives = "0.23.0"
serde = { workspace = true }

[features]
tear = [
    "contract-logs-module",
    "utilities-module",
    "near-tgi-module",
    "ai-moderator-module",
    "ai-moderator/near",
    "websocket-events",
    "burrow-liquidations-module",
    "price-commands-module",
    "wallet-tracking-module",
]
xeon = [
    "contract-logs-module",
    "ft-buybot-module",
    "new-liquidity-pools-module",
    "nft-buybot-module",
    "potlock-module",
    "price-alerts-module",
    "socialdb-module",
    "new-tokens-module",
    "utilities-module",
    "near-tgi-module",
    "ai-moderator-module",
    "ai-moderator/near",
    "redis-events",
    "configure-channels",
    "burrow-liquidations-module",
    "price-commands-module",
    "trading-bot-module",
    "wallet-tracking-module",
]
int = [
    "ai-moderator-module",
    "image-gen-module",
    "all-group-features-need-admin",
    "configure-channels",
]

all-group-features-need-admin = []
configure-channels = []

redis-events = ["tearbot-common/redis-events"]
websocket-events = ["tearbot-common/websocket-events"]
contract-logs-module = ["tearbot-common/contract-logs-module", "contract-logs"]
ft-buybot-module = ["tearbot-common/ft-buybot-module", "ft-buybot"]
new-liquidity-pools-module = [
    "tearbot-common/new-liquidity-pools-module",
    "new-liquidity-pools",
]
nft-buybot-module = ["tearbot-common/nft-buybot-module", "nft-buybot"]
potlock-module = ["tearbot-common/potlock-module", "potlock"]
price-alerts-module = ["tearbot-common/price-alerts-module", "price-alerts"]
socialdb-module = ["tearbot-common/socialdb-module", "socialdb"]
new-tokens-module = ["tearbot-common/new-tokens-module", "new-tokens"]
utilities-module = ["tearbot-common/utilities-module", "utilities"]
near-tgi-module = ["tearbot-common/near-tgi-module", "near-tgi"]
ai-moderator-module = ["tearbot-common/ai-moderator-module", "ai-moderator"]
image-gen-module = ["tearbot-common/image-gen-module", "image-gen"]
burrow-liquidations-module = [
    "tearbot-common/burrow-liquidations-module",
    "burrow-liquidations",
]
price-commands-module = ["tearbot-common/price-commands-module", "price-commands"]
trading-bot-module = ["tearbot-common/trading-bot-module", "trading-bot", "utilities/trading-bot"]
wallet-tracking-module = [
    "tearbot-common/wallet-tracking-module",
    "wallet-tracking",
]
