[package]
name = "tip-bot"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "tip-bot-module" ] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
near-api = { workspace = true }
near-primitives = { workspace = true }
near-gas = { workspace = true }
near-token = { workspace = true }
bigdecimal = { workspace = true }
serde_json = { workspace = true }
bip39 = "2.1.0"
