[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

[dependencies]
tearbot-common = { path = "../tearbot-common" }
async-trait = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
