[package]
name = "utilities"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
tearbot-common = { path = "../tearbot-common" }
async-trait = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
itertools = { workspace = true }
