[package]
name = "wallet-tracking"
version = { workspace = true }
edition = { workspace = true }
license = "MIT"

[dependencies]
tearbot-common = { path = "../tearbot-common", features = [ "wallet-tracking-module" ] }
async-trait = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true } 
itertools = { workspace = true }
regex = { workspace = true }
